feat: 增加课程表

--- a/src/styles/variables.less
+++ b/src/styles/variables.less
@@ -1,3 +1,3 @@
-@primaryColor: #55efc4;
-@lightColor: #81ecec;
-@fontColor: #000;
+@primaryText: #05c46b;
+@secondaryText: #ffd32a;
+@blackFill: #1e272e;
